sumo/tests/netconvert/import/XML/errors/broken_edge/edge#id__duplicate1/errors.netconvert
Error: Duplicate edge occured. ID='1'
Quitting (on error).
